dashboard page design complate

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
   --bgSoft: #182237;
   --text: white;
   --textSoft: #b7bac1;
+  --shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+  --shadow-md: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
 * {
